--- a/pag1.html
+++ b/pag1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Robson Maravilhoso
-    <a href="pag1.html">IR</a>
+    ROBSON SENSACIONAL
+    <a href="index.html">IR</a>
 </body>
 </html>
